test/compile_errors/err_compiler_hook_unknown_phase.w
//! expect-error: unknown compiler hook phase

@[compiler_hook(before_codegen)]
fn lint_project:
    0

